added 2nd dashboard static page

--- a/templates/auth/password_reset.html
+++ b/templates/auth/password_reset.html
@@ -7,13 +7,7 @@
 <div class="min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
   <div class="w-96 h-[471px] relative bg-white rounded-xl shadow-[0px_1px_2px_0px_rgba(0,0,0,0.05)] outline outline-1 outline-offset-[-1px] outline-gray-200">
     <div class="w-10 h-10 left-[107px] top-[84px] absolute bg-sky-600 rounded-lg border-gray-200 inline-flex justify-center items-center">
-      <div class="w-6 h-7 relative bg-black/0 border-gray-200">
-        <div class="w-6 h-4 left-0 top-[4.25px] absolute inline-flex justify-center items-center">
-          <div class="w-6 h-4 relative bg-black/0 border-gray-200 overflow-hidden">
-            <div class="w-6 h-4 left-0 top-[1.12px] absolute bg-white"></div>
-          </div>
-        </div>
-      </div>
+      <img src="{% static 'images/login/logo.svg' %}" alt="Logo" class="w-6 h-6">
     </div>
     
     <div class="w-32 h-9 left-[159px] top-[85.50px] absolute bg-black/0 border-gray-200 inline-flex flex-col justify-start items-start">
@@ -52,16 +46,10 @@
         </div>
         <div class="w-80 h-10 left-0 top-[25px] absolute bg-black/0 border-gray-200">
           <div class="w-80 h-10 left-0 top-0 absolute bg-white rounded-lg outline outline-1 outline-offset-[-1px] outline-gray-200">
-            <input type="email" name="email" class="w-full h-10 left-[12px] top-0 absolute bg-transparent outline-none text-gray-900 text-base font-normal font-['Inter'] leading-normal" placeholder="Enter your email address" required>
-          </div>
-          <div class="w-6 h-10 pr-3 left-[308px] top-0 absolute bg-black/0 border-gray-200 inline-flex justify-start items-center">
-            <div class="w-3.5 h-5 relative bg-black/0 border-gray-200">
-              <div class="w-3.5 h-3.5 left-0 top-[2.75px] absolute inline-flex justify-center items-center">
-                <div class="w-3.5 h-3.5 relative bg-black/0 border-gray-200 overflow-hidden">
-                  <div class="w-3.5 h-2.5 left-0 top-[1.75px] absolute bg-gray-400"></div>
-                </div>
-              </div>
+            <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
+              <img src="{% static 'images/login/username.svg' %}" alt="Username" class="h-5 w-5">
             </div>
+            <input type="email" name="email" class="w-full h-10 left-[36px] top-0 absolute bg-transparent outline-none text-gray-900 text-base font-normal font-['Inter'] leading-normal pl-3" placeholder="Enter your email address" required>
           </div>
         </div>
       </div>
