--- a/templates/dashboard/components/sidebar.html
+++ b/templates/dashboard/components/sidebar.html
@@ -78,20 +78,20 @@
           <span class="font-medium">Manage Users</span>
         </a>
         <a
-          href="{% url 'dashboard:configure_requests' %}"
-          class="flex items-center gap-3 px-3 py-2 rounded-lg {% if request.resolver_match.view_name == 'dashboard:configure_requests' %} text-sky-600 bg-sky-100 {% else %} text-gray-700 hover:bg-gray-100 {% endif %}"
+          href="{% url 'dashboard:tickets' %}"
+          class="flex items-center gap-3 px-3 py-2 rounded-lg {% if request.resolver_match.view_name == 'dashboard:tickets' %} text-sky-600 bg-sky-100 {% else %} text-gray-700 hover:bg-gray-100 {% endif %}"
         >
           <img
-            src="{% if request.resolver_match.view_name == 'dashboard:configure_requests' %}
+            src="{% if request.resolver_match.view_name == 'dashboard:tickets' %}
                {% static 'images/sidebar/configure_requests_highlighted.svg' %}
              {% else %}
                {% static 'images/sidebar/configure_request.svg' %}
              {% endif %}"
-            alt="Configure Requests Icon"
+            alt="Tickets Icon"
             class="w-5 h-5"
           />
 
-          <span class="font-medium">Configure Requests</span>
+          <span class="font-medium">Tickets</span>
         </a>
         <a
           href="{% url 'dashboard:locations' %}"
