added the tickets dashboard , ticket details and create new ticket functionality

--- a/templates/dashboard/base_dashboard.html
+++ b/templates/dashboard/base_dashboard.html
@@ -21,7 +21,7 @@
         {% endif %}
 
         <div class="flex-1 flex flex-col overflow-hidden">
-            <main class="flex-1 overflow-x-hidden overflow-y-auto">
+            <main class="flex-1 overflow-x-hidden overflow-y-visible">
                 {% block content %}
                 {% endblock %}
             </main>
